src/test/ui/parser/macros-no-semicolon.stderr
error: expected one of `.`, `;`, `?`, `}`, or an operator, found `assert_eq`
  --> $DIR/macros-no-semicolon.rs:3:5
   |
LL |     assert_eq!(1, 2)
   |                     - expected one of `.`, `;`, `?`, `}`, or an operator here
LL |     assert_eq!(3, 4)
   |     ^^^^^^^^^ unexpected token

error: aborting due to previous error

